# Euchre

./: CMakeLists.txt  gtest.cmake
DeckDeal/: CMakeLists.txt
DeckDeal/src/: DeckOfCards.cpp
Test/: main.cpp
src/: Player.h
